varnish-macros/src/snapshots/collision.snap
---
source: varnish-macros/src/tests.rs
---
#[cfg(test)]
#[allow(dead_code)]
const _VTC_REBUILD_ANCHOR_0: &[u8] = include_bytes!(
    "{MANIFEST_DIR}/tests/vtc_fixtures_collision/foo-bar.vtc",
);
#[cfg(test)]
#[allow(dead_code)]
const _VTC_REBUILD_ANCHOR_1: &[u8] = include_bytes!(
    "{MANIFEST_DIR}/tests/vtc_fixtures_collision/foo_bar.vtc",
);
#[cfg(test)]
#[test]
fn vtc_foo_bar() {
    let dylib_path_var = if cfg!(target_os = "macos") {
        "DYLD_FALLBACK_LIBRARY_PATH"
    } else {
        "LD_LIBRARY_PATH"
    };
    let dylib_path = ::std::env::var(dylib_path_var).unwrap_or_default();
    if let Err(err) = ::varnish::varnishtest::run_one_test(
        &dylib_path,
        env!("CARGO_PKG_NAME"),
        ::std::path::Path::new(
            "{MANIFEST_DIR}/tests/vtc_fixtures_collision/foo-bar.vtc",
        ),
        option_env!("VARNISHTEST_DURATION").unwrap_or("10s"),
        false,
    ) {
        panic!("{err}");
    }
}
#[cfg(test)]
#[test]
fn vtc_foo_bar_1() {
    let dylib_path_var = if cfg!(target_os = "macos") {
        "DYLD_FALLBACK_LIBRARY_PATH"
    } else {
        "LD_LIBRARY_PATH"
    };
    let dylib_path = ::std::env::var(dylib_path_var).unwrap_or_default();
    if let Err(err) = ::varnish::varnishtest::run_one_test(
        &dylib_path,
        env!("CARGO_PKG_NAME"),
        ::std::path::Path::new(
            "{MANIFEST_DIR}/tests/vtc_fixtures_collision/foo_bar.vtc",
        ),
        option_env!("VARNISHTEST_DURATION").unwrap_or("10s"),
        false,
    ) {
        panic!("{err}");
    }
}
