varnish-macros/src/snapshots/invalid_glob.snap
---
source: varnish-macros/src/tests.rs
---
::core::compile_error!(
    "failed to parse glob pattern \"{MANIFEST_DIR}/tests/[unclosed_bracket\": Pattern syntax error near position N: invalid range pattern",
)
