varnish-macros/src/snapshots/no_matches.snap
---
source: varnish-macros/src/tests.rs
---
#[cfg(test)]
#[test]
fn vtc_no_files_found() {
    panic!(
        "{}",
        "no VTC test files matched pattern \"{MANIFEST_DIR}/tests/vtc_fixtures/*.does_not_exist\"",
    );
}
